--- a/GRANDEURIG.html
+++ b/GRANDEURIG.html
@@ -145,9 +145,9 @@
 												<span class="opener">Tech</span>
 												<ul>
 													<li><a href="Sonata.html">Sonata in Kakao i</a></li>
-													<li><a href="kakaomini">KakaoMiniC</a></li>
-													<li><a href="genesisG70">GenesisG70 in kakao i</a></li>
-													<li><a href="GRANDEURIG">GrandeurIG in kakao i</a></li>
+													<li><a href="kakaomini.html">KakaoMiniC</a></li>
+													<li><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
+													<li><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
 												</ul>
 									</nav>
 
