--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						</article>
 
 						<article>
-							<a href="GrandeurIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
+							<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
 							<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
 							<p>2019 그랜저에도 카카오 AI탑재</p>
 						</article>
@@ -212,9 +212,9 @@
 											<span class="opener">Tech</span>
 											<ul>
 												<li><a href="Sonata.html">Sonata in Kakao i</a></li>
-												<li><a href="kakaomini">KakaoMiniC</a></li>
-												<li><a href="genesisG70">GenesisG70 in kakao i</a></li>
-												<li><a href="GRANDEURIG">GrandeurIG in kakao i</a></li>
+												<li><a href="kakaomini.html">KakaoMiniC</a></li>
+												<li><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
+												<li><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
 											</ul>
 								</nav>
 
@@ -238,7 +238,7 @@
 										</article>
 
 										<article>
-											<a href="GrandeurIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
+											<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
 											<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
 											<p>2019 그랜저에도 카카오 AI탑재</p>
 										</article>
