--- a/Q&A.html
+++ b/Q&A.html
@@ -9,7 +9,6 @@
 		<title>Q&A</title>
 		<meta charset="utf-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="stylesheet" href="assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
 		<style>
@@ -315,12 +314,12 @@
 												</div>
 											</div> <!-- cd-faq__content -->
 										</li>
-
 									</ul> <!-- cd-faq__group -->
 								</div> <!-- cd-faq__items -->
-							</li>
 
-							  <div class="cd-faq__overlay" aria-hidden="true"></div>
+								<a href="#0" class="cd-faq__close-panel text--replace">Close</a>
+							  
+		  <div class="cd-faq__overlay" aria-hidden="true"></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
