--- a/Partner.html
+++ b/Partner.html
@@ -6,6 +6,42 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet"> <!--폰트 사용-->
+		<head>
+		<style type="text/css">
+		/*Table Style */
+		.tg
+		{
+			border-collapse:collapse;border-spacing:0;
+		}
+		.tg td
+		{
+			border-style:solid;
+			border-width:1px;
+			overflow:hidden;
+			word-break:normal;
+			border-color:black;
+		}
+		.tg th
+		{
+			border-style:solid;
+			border-width:1px;
+			overflow:hidden;
+			word-break:normal;
+			border-color:black;
+		}
+
+		.tg .tg-0pky
+		{
+			border-color:inherit;
+			vertical-align:center
+		}
+		/* 아래 컨텐츠 부제목 */
+		#Subtitle
+		{
+			margin-bottom:-25px;
+		}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -18,50 +54,61 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
-									</ul>
-								</header>
-
-							<!-- Content -->
-								<section>
-									<header class="main">
-										<h1>partner</h1>
+									<a href="index.html" class="logo"><strong>Kakao</strong> i </a>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+							<!-- Banner -->
+							<section id="banner">
+								<div class="content">
+									<header>
+										<h1 id= "title" div style="font-family: 'Noto Sans KR', sans-serif";>Partner<br /> <!--큰 제목-->
+										</h1>
+									</header>
+										<table class="tg">
+									  <tr>
+									    <th class="tg-0pky"><img src="PartnerImage/samsung.png" style="max-width: 90%; height: auto;" alt="삼성 로고"></th> <!-- 반응형이라 사이즈에 따라 표가 늘어남 -->
+									    <th class="tg-0pky"><img src="PartnerImage/arirang.png" style="max-width: 90%; height: auto;" alt="arirang 로고"></th>
+									    <th class="tg-0pky"><img src="PartnerImage/bbs.png" style="max-width: 90%; height: auto;" alt="bbs 로고"></th>
+									    <th class="tg-0pky"><img src="PartnerImage/cbs.png" style="max-width: 90%; height: auto;" alt="cbs 로고"></th>
+									    <th class="tg-0pky"><img src="PartnerImage/commax.png" style="max-width: 90%; height: auto;" alt="commax 로고"></th>
+									  </tr>
+									  <tr>
+									    <td class="tg-0pky"><img src="PartnerImage/cpbc.png" style="max-width: 90%; height: auto;" alt="cpbc 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/d_live.png" style="max-width: 90%; height: auto;" alt="d`live 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/ez.png" style="max-width: 90%; height: auto;" alt="ezVile 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/febc.png" style="max-width: 90%; height: auto;" alt="febc극동방송 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/gs.png" style="max-width: 90%; height: auto;" alt="GS건설 로고"></td>
+									  </tr>
+									  <tr>
+									    <td class="tg-0pky"><img src="PartnerImage/hyundai.png" style="max-width: 90%; height: auto;" alt="hyundai 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/irex.png" style="max-width: 90%; height: auto;" alt="iREX 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/kakaom.png" style="max-width: 90%; height: auto;" alt="kakaoM 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/kbs.png" style="max-width: 90%; height: auto;" alt="KBS 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/kia.png" style="max-width: 90%; height: auto;" alt="KIA 로고"></td>
+									  </tr>
+									  <tr>
+									    <td class="tg-0pky"><img src="PartnerImage/melon.png" style="max-width: 90%; height: auto;" alt="Melon 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/news.png" style="max-width: 90%; height: auto;" alt="YTN연합뉴스 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/posco.png" style="max-width: 90%; height: auto;" alt="posco건설 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/posco_ict.png" style="max-width: 90%; height: auto;" alt="poscoICT 로고"></td>
+									    <td class="tg-0pky"><img src="PartnerImage/rotte.png" style="max-width: 90%; height: auto;" alt="롯데정보통신 로고"></td>
+									  </tr>
+									</table>
+									<section>
+								<div class="content">
+									<div  id = "Subtitle">
+									<h2 style="font-family: 'Noto Sans KR', sans-serif">제휴제안 등록</h2></div>
+										<p style="font-family: 'Noto Sans KR', sans-serif";>카카오가 만들어가는 인공지능의 새로운 내일과 일상의 변화를 지켜봐주세요</p>
+									</header>
+										<a href="https://with.kakao.com/kakaoi" class="button" style="font-family: 'Noto Sans KR', sans-serif">등록하기</a> </br>
+										<p></p>
+									</section>
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							</div>
 
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
-								</section>
-
-						</div>
 					</div>
+				</section>
+				</div>
 
 				<!-- Sidebar -->
 					<div id="sidebar">
@@ -86,12 +133,39 @@
 												</ul>
 									</nav>
 
+									<!-- Section -->
+										<section>
+											<header class="major">
+												<h2>Another Technology</h2>
+											</header>
+											<div class="mini-posts">
+
+												<article>
+														<a href="kakaomini.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
+													<h3>Kaokao Mini</h3>
+													<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
+												</article>
+
+												<article>
+													<a href="genesisG70.html" class="image"><img src="images/genesis_G70.png" alt="genesisG70사진과 해당 genesisG70에 대한 링크" /></a>
+													<h3>Genesis G70</h3>
+													<p>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
+												</article>
+
+												<article>
+													<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
+													<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+													<p>2019 그랜저에도 카카오 AI탑재</p>
+												</article>
+										</section>
+
 								<!-- Footer -->
 									<footer id="footer">
 										<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
 									</footer>
 							</div>
 						</div>
+					</div>
 				</div>
 			</div>
 
