--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Kaokao i</title>
+		<title>Kaokao i PR homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 								<p id= "title" div style="font-family: 'Noto Sans KR', sans-serif";>브랜드 영상</p> <!-- 부재-->
 							</header>
 								<p>
-								<!-- 로딩효과 -->
+								<!-- 영상 슬라이드 -->
 								<div id="cp_widget_0c80bbb5-82be-4653-bceb-a437fd382c3d">Loading</div>
 
 							<!-- 이미지 슬라이드 -->
@@ -246,11 +246,12 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+									<p class="copyright">&copy; 송창범</a>.</p>
 								</footer>
 						</div>
 					</div>
 			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
