--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 송창범</a>.</p>
+									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
 								</footer>
 						</div>
 					</div>
