--- a/genesisG70.html
+++ b/genesisG70.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="genesisG70.html" class="logo"><strong>genesisG70</strong> C</a>
+				<a href="genesisG70.html" class="logo"><strong>genesisG70</strong> </a>
 
 			</header>
 
