--- a/GRANDEURIG.html
+++ b/GRANDEURIG.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="GRANDEURIG.html" class="logo"><strong>Grandeur IG</strong></a>
+				<a href="index.html" class="logo"><strong>Kakao</strong> i </a>
 			</header>
 
 				<!-- Banner -->
