--- a/genesisG70.html
+++ b/genesisG70.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="genesisG70.html" class="logo"><strong>genesis G70</strong> </a>
+				<a href="index.html" class="logo"><strong>KaKao</strong> i</a>
 
 			</header>
 
