--- a/GRANDEURIG.html
+++ b/GRANDEURIG.html
@@ -52,7 +52,7 @@
 								다양한 방식의 음성 발화도 인식이 가능해 사용 편의성을 크게 높였다.</p> <!--내용-->
 						</div>
 						<span class="image object">
-							<img src="images/genesis_G70.png" alt="genesis_G70 사진." />
+							<img src="images/GRANDEUR_IG.jpg" alt="Grandure IG 사진." />
 						</span>
 					</section>
 
