--- a/genesisG70.html
+++ b/genesisG70.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>genesisG70</title>
+		<title>genesis G70</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -95,26 +95,26 @@
 			<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Another Technology</h2>
+						<h2 style="font-family: 'Noto Sans KR', sans-serif;">Another Technology</h2>
 					</header>
 					<div class="posts">
 
 						<article>
-							<a href="Sonata.html" class="image"><img src="images/Sonata2019.jpg" alt="" /></a>
-							<h3>신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
-							<p>에어컨 등 공조 장치도 음성으로 제어 가능</p>
+							<a href="index.html" class="image"><img src="images/Sonata2019.jpg" alt="Sonata2019 사진과 해당 Sonata2019에 대한 링크" /></a>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">에어컨 등 공조 장치도 음성으로 제어 가능</p>
 						</article>
 
 						<article>
 							<a href="kakaomini.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-							<h3>Kaokao Mini</h3>
-							<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">Kakao Mini</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 						</article>
 
 						<article>
 							<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-							<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-							<p>2019 그랜저에도 카카오 AI탑재</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">2019 그랜저에도 카카오 AI탑재</p>
 						</article>
 
 					</div>
@@ -130,50 +130,50 @@
 								<!-- Menu -->
 									<nav id="menu">
 										<header class="major">
-											<h2>Menu</h2>
+											<h2 style="font-family: 'Noto Sans KR', sans-serif;">Menu</h2>
 										</header>
 										<ul>
-											<li><a href="index.html">Main</a></li>
-											<li><a href="Partner.html">Partner</a></li>
-											<li><a href="Q&A.html">Q&A</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="index.html">Main</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Partner.html">Partner</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Q&A.html">Q&A</a></li>
 											<li>
 												<span class="opener">Tech</span>
 												<ul>
-													<li><a href="Sonata.html">Sonata in Kakao i</a></li>
-													<li><a href="kakaomini.html">KakaoMiniC</a></li>
-													<li><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
-													<li><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Sonata.html">Sonata in Kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="kakaomini.html">KakaoMiniC</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
 												</ul>
 									</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Another Technology</h2>
+										<h2 style="font-family: 'Noto Sans KR', sans-serif;">Another Technology</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
 											<a href="Sonata.html" class="image"><img src="images/Sonata2019.jpg" alt="" /></a>
-											<h3>신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
-											<p>에어컨 등 공조 장치도 음성으로 제어 가능</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif;">신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif;">에어컨 등 공조 장치도 음성으로 제어 가능</p>
 										</article>
 
 										<article>
 											<a href="kakaomini.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-											<h3>Kaokao Mini</h3>
-											<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif;">Kaokao Mini</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif;">헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 										</article>
 
 										<article>
 											<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-											<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-											<p>2019 그랜저에도 카카오 AI탑재</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif;">2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif;">2019 그랜저에도 카카오 AI탑재</p>
 										</article>
 								</section>
 
 								<!-- Footer -->
 									<footer id="footer">
-										<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+										<p class="copyright" style="font-family: 'Noto Sans KR', sans-serif;">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
 									</footer>
 						</div>
 					</div>
