--- a/Sonata.html
+++ b/Sonata.html
@@ -144,26 +144,26 @@
 			<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Another Technology</h2>
+						<h2 style="font-family: 'Noto Sans KR', sans-serif";>Another Technology</h2>
 					</header>
 					<div class="posts">
 
 						<article>
 								<a href="kakaomini.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-							<h3>Kaokao Mini</h3>
-							<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif";>Kakao Mini</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif";>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 						</article>
 
 						<article>
 							<a href="genesisG70.html" class="image"><img src="images/genesis_G70.png" alt="genesisG70사진과 해당 genesisG70에 대한 링크" /></a>
-							<h3>Genesis G70</h3>
-							<p>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif";>Genesis G70</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif";>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
 						</article>
 
 						<article>
 							<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-							<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-							<p>2019 그랜저에도 카카오 AI탑재</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif";>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif";>2019 그랜저에도 카카오 AI탑재</p>
 						</article>
 
 					</div>
@@ -179,19 +179,19 @@
 								<!-- Menu -->
 									<nav id="menu">
 										<header class="major">
-											<h2>Menu</h2>
+											<h2 style="font-family: 'Noto Sans KR', sans-serif";>Menu</h2>
 										</header>
 										<ul>
-											<li><a href="index.html">Main</a></li>
-											<li><a href="Partner.html">Partner</a></li>
-											<li><a href="Q&A.html">Q&A</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif";><a href="index.html">Main</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Partner.html">Partner</a></li>
+											<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Q&A.html">Q&A</a></li>
 											<li>
 												<span class="opener">Tech</span>
 												<ul>
-													<li><a href="Sonata.html">Sonata in Kakao i</a></li>
-													<li><a href="kakaomini.html">KakaoMiniC</a></li>
-													<li><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
-													<li><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Sonata.html">Sonata in Kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="kakaomini.html">KakaoMiniC</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
+													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
 												</ul>
 									</nav>
 
@@ -199,33 +199,33 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Another Technology</h2>
+										<h2 style="font-family: 'Noto Sans KR', sans-serif";>Another Technology</h2>
 									</header>
 									<div class="mini-posts">
 
 										<article>
 												<a href="Sonata.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-											<h3>Kaokao Mini</h3>
-											<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif";>Kaokao Mini</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif";>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 										</article>
 
 										<article>
 											<a href="genesisG70.html" class="image"><img src="images/genesis_G70.png" alt="genesisG70사진과 해당 genesisG70에 대한 링크" /></a>
-											<h3>Genesis G70</h3>
-											<p>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif";>Genesis G70</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif";>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
 										</article>
 
 										<article>
 											<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-											<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-											<p>2019 그랜저에도 카카오 AI탑재</p>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif";>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+											<p style="font-family: 'Noto Sans KR', sans-serif";>2019 그랜저에도 카카오 AI탑재</p>
 										</article>
 
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+									<p class="copyright" style="font-family: 'Noto Sans KR', sans-serif";>&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
 								</footer>
 
 						</div>
