--- a/kakaomini.html
+++ b/kakaomini.html
@@ -128,21 +128,21 @@
 					</header>
 					<div class="posts">
 						<article>
-							<a href="index.html" class="image"><img src="images/Sonata2019.jpg" alt="" /></a>
-							<h3>신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
-							<p>에어컨 등 공조 장치도 음성으로 제어 가능</p>
+							<a href="index.html" class="image"><img src="images/Sonata2019.jpg" alt="Sonata2019 사진과 해당 Sonata2019에 대한 링크" /></a>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">에어컨 등 공조 장치도 음성으로 제어 가능</p>
 						</article>
 
 						<article>
 							<a href="genesisG70.html" class="image"><img src="images/genesis_G70.png" alt="genesisG70사진과 해당 genesisG70에 대한 링크" /></a>
-							<h3>Genesis G70</h3>
-							<p>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">Genesis G70</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
 						</article>
 
 						<article>
 							<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-							<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-							<p>2019 그랜저에도 카카오 AI탑재</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">2019 그랜저에도 카카오 AI탑재</p>
 						</article>
 					</div>
 				</section>
@@ -160,16 +160,16 @@
 							<h2>Menu</h2>
 						</header>
 						<ul>
-							<li><a href="index.html">Main</a></li>
-							<li><a href="Partner.html">Partner</a></li>
-							<li><a href="Q&A.html">Q&A</a></li>
+							<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="index.html">Main</a></li>
+							<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Partner.html">Partner</a></li>
+							<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Q&A.html">Q&A</a></li>
 							<li>
-								<span class="opener">Tech</span>
+								<span class="opener" style="font-family: 'Noto Sans KR', sans-serif;">Tech</span>
 								<ul>
-									<li><a href="Sonata.html">Sonata in Kakao i</a></li>
-									<li><a href="kakaomini.html">KakaoMiniC</a></li>
-									<li><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
-									<li><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
+									<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Sonata.html">Sonata in Kakao i</a></li>
+									<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="kakaomini.html">KakaoMiniC</a></li>
+									<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="genesisG70.html">GenesisG70 in kakao i</a></li>
+									<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="GRANDEURIG.html">GrandeurIG in kakao i</a></li>
 								</ul>
 					</nav>
 
@@ -181,26 +181,26 @@
 					<div class="mini-posts">
 						<article>
 							<a href="index.html" class="image"><img src="images/Sonata2019.jpg" alt="" /></a>
-							<h3>신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
-							<p>에어컨 등 공조 장치도 음성으로 제어 가능</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">신형 쏘나타에 올라탄 AI 비서 ‘카카오 아이’</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">에어컨 등 공조 장치도 음성으로 제어 가능</p>
 						</article>
 
 						<article>
 							<a href="genesisG70.html" class="image"><img src="images/genesis_G70.png" alt="genesisG70사진과 해당 genesisG70에 대한 링크" /></a>
-							<h3>Genesis G70</h3>
-							<p>현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">Genesis G70</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">현대차, 제네시스 G70에 카카오 음성인식 AI 탑재.</p>
 						</article>
 
 						<article>
 							<a href="GRANDEURIG.html" class="image"><img src="images/GRANDEUR_IG.jpg" alt="" /></a>
-							<h3>2019년 그랜저, 과연 무엇이 달라졌을까</h3>
-							<p>2019 그랜저에도 카카오 AI탑재</p>
+							<h3 style="font-family: 'Noto Sans KR', sans-serif;">2019년 그랜저, 과연 무엇이 달라졌을까</h3>
+							<p style="font-family: 'Noto Sans KR', sans-serif;">2019 그랜저에도 카카오 AI탑재</p>
 						</article>
 				</section>
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+					<p class="copyright" style="font-family: 'Noto Sans KR', sans-serif;">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
 				</footer>
 			</div>
 		</div>
