--- a/Sonata.html
+++ b/Sonata.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Kaokao i</title>
+		<title>kakao i</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -205,7 +205,7 @@
 
 										<article>
 												<a href="Sonata.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-											<h3 style="font-family: 'Noto Sans KR', sans-serif";>Kaokao Mini</h3>
+											<h3 style="font-family: 'Noto Sans KR', sans-serif";>kakao Mini</h3>
 											<p style="font-family: 'Noto Sans KR', sans-serif";>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 										</article>
 
