--- a/Partner.html
+++ b/Partner.html
@@ -142,7 +142,7 @@
 
 												<article>
 														<a href="kakaomini.html" class="image"><img src="images/kakaomini.png" alt="kakaomini사진과 해당 kakaominiC에 대한 링크" /></a>
-													<h3>Kaokao Mini</h3>
+													<h3>kakao Mini</h3>
 													<p>헤이 카카오! 이 한마디로, 당신의 생활은 더 쉽고 편리해집니다.</p>
 												</article>
 
