--- a/Partner.html
+++ b/Partner.html
@@ -54,7 +54,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Kakao</strong> i </a>
+									<a href="index.html" class="logo"><strong>Kakao</strong> i </a> <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 									</header>
 
 							<!-- Banner -->
@@ -124,7 +124,7 @@
 											<li><a href="Partner.html">Partner</a></li>
 											<li><a href="Q&A.html">Q&A</a></li>
 											<li>
-												<span class="opener">Tech</span>
+												<span class="opener">Tech</span> <!-- 접이식 메뉴 구현 -->
 												<ul>
 													<li><a href="Sonata.html">Sonata in Kakao i</a></li>
 													<li><a href="kakaomini">KakaoMiniC</a></li>
@@ -136,7 +136,7 @@
 									<!-- Section -->
 										<section>
 											<header class="major">
-												<h2>Another Technology</h2>
+												<h2>Another Technology</h2> <!-- 제목 -->
 											</header>
 											<div class="mini-posts">
 
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 
-		<!-- Scripts -->
+		<!-- 애니메이션, 웹 동작에 필요한 Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
