--- a/genesisG70.html
+++ b/genesisG70.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Kakao</strong> i</a>
+				<a href="index.html" class="logo"><strong>Kakao</strong> i</a> <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 
 			</header>
 
@@ -61,7 +61,7 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>TECHNOLOGY</h2>
+						<h2>TECHNOLOGY</h2> <!-- 제목 -->
 					</header>
 					<div class="features">
 						<article>
@@ -137,7 +137,7 @@
 											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Partner.html">Partner</a></li>
 											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Q&A.html">Q&A</a></li>
 											<li>
-												<span class="opener">Tech</span>
+												<span class="opener">Tech</span> <!-- 접이식 메뉴 구현 -->
 												<ul>
 													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Sonata.html">Sonata in Kakao i</a></li>
 													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="kakaomini.html">KakaoMiniC</a></li>
