--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Kakao</strong> i</a>
+				<a href="index.html" class="logo"><strong>Kakao</strong> i</a>  <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 			</header>
 				<!-- Banner -->
 					<section id="banner">
@@ -79,7 +79,7 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>TECHNOLOGY</h2>
+						<h2>TECHNOLOGY</h2> <!-- 제목 -->
 					</header>
 					<div class="features">
 						<article>
@@ -169,7 +169,7 @@
 			<!-- Section -->
 				<section>
 					<header class="major">
-						<h2 style="font-family: 'Noto Sans KR', sans-serif;">Another Technology</h2>
+						<h2 style="font-family: 'Noto Sans KR', sans-serif;">Another Technology</h2> <!-- 제목 -->
 					</header>
 					<div class="posts">
 
@@ -209,7 +209,7 @@
 										<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Partner.html">Partner</a></li>
 										<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Q&A.html">Q&A</a></li>
 										<li>
-											<span class="opener">Tech</span>
+											<span class="opener">Tech</span> <!-- 접이식 메뉴 구현 -->
 											<ul>
 												<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Sonata.html">Sonata in Kakao i</a></li>
 												<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="kakaomini.html">KakaoMiniC</a></li>
@@ -253,7 +253,7 @@
 			</div>
 		</div>
 
-		<!-- Scripts -->
+		<!-- 애니메이션, 웹 동작에 필요한 Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
@@ -291,7 +291,8 @@
 
 			<!-- 영상 슬라이드 -->
 			<script type="text/javascript">
-			var cpo = []; cpo["_object"] ="cp_widget_0c80bbb5-82be-4653-bceb-a437fd382c3d"; cpo["_fid"] = "AABAGhucHAmt"; // https://www.cincopa.com/media-platform/wizard2/library15#details=AQODFRz5Fy4Y 에서 ID값임
+			var cpo = []; cpo["_object"] ="cp_widget_0c80bbb5-82be-4653-bceb-a437fd382c3d"; cpo["_fid"] = "AABAGhucHAmt"; // https://www.cincopa.com/media-platform/wizard2/library15#details=AQODFRz5Fy4Y 에서
+			                                                                                                              // ID값임
 			var _cpmp = _cpmp || []; _cpmp.push(cpo);
 			(
 				function()
