--- a/GRANDEURIG.html
+++ b/GRANDEURIG.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Kakao</strong> i </a>
+				<a href="index.html" class="logo"><strong>Kakao</strong> i </a> <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 			</header>
 
 				<!-- Banner -->
@@ -59,7 +59,7 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>TECHNOLOGY</h2>
+						<h2>TECHNOLOGY</h2> <!-- 제목 -->
 					</header>
 					<div class="features">
 						<article>
@@ -142,7 +142,7 @@
 											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Partner.html">Partner</a></li>
 											<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Q&A.html">Q&A</a></li>
 											<li>
-												<span class="opener" style="font-family: 'Noto Sans KR', sans-serif;">Tech</span>
+												<span class="opener" style="font-family: 'Noto Sans KR', sans-serif;">Tech</span> <!-- 접이식 메뉴 구현 -->
 												<ul>
 													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="Sonata.html">Sonata in Kakao i</a></li>
 													<li style="font-family: 'Noto Sans KR', sans-serif;"><a href="kakaomini.html">KakaoMiniC</a></li>
@@ -186,7 +186,7 @@
 
 			</div>
 
-		<!-- Scripts -->
+		<!-- 애니메이션, 웹 동작에 필요한 Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
