--- a/Sonata.html
+++ b/Sonata.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Kakao</strong> i</a>
+				<a href="index.html" class="logo"><strong>Kakao</strong> i</a> <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 
 			</header>
 
@@ -54,7 +54,7 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>TECHNOLOGY</h2>
+						<h2>TECHNOLOGY</h2> <!-- 제목 -->
 					</header>
 					<div class="features">
 						<article>
@@ -144,7 +144,7 @@
 			<!-- Section -->
 				<section>
 					<header class="major">
-						<h2 style="font-family: 'Noto Sans KR', sans-serif";>Another Technology</h2>
+						<h2 style="font-family: 'Noto Sans KR', sans-serif";>Another Technology</h2> <!-- 제목 -->
 					</header>
 					<div class="posts">
 
@@ -186,7 +186,7 @@
 											<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Partner.html">Partner</a></li>
 											<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Q&A.html">Q&A</a></li>
 											<li>
-												<span class="opener">Tech</span>
+												<span class="opener">Tech</span> <!-- 접이식 메뉴 구현 -->
 												<ul>
 													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="Sonata.html">Sonata in Kakao i</a></li>
 													<li style="font-family: 'Noto Sans KR', sans-serif";><a href="kakaomini.html">KakaoMiniC</a></li>
@@ -233,7 +233,7 @@
 
 			</div>
 
-		<!-- Scripts -->
+		<!-- 애니메이션, 웹 동작에 필요한 Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
