--- a/kakaomini.html
+++ b/kakaomini.html
@@ -31,15 +31,14 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Kakao</strong> i </a>
+					<a href="index.html" class="logo"><strong>Kakao</strong> i </a> <!-- Main 제목이며 홈으로 가는 역할을 함. -->
 				</header>
 
 				<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1 div style="font-family: 'Noto Sans KR', sans-serif" ;>새롭지만 새롭지 않은 카카오미니C<br />
-								<!--큰 제목-->
+							<h1 div style="font-family: 'Noto Sans KR', sans-serif" ;>새롭지만 새롭지 않은 카카오미니C<br /> <!--큰 제목-->
 							</h1>
 							<p id="title" div style="font-family: 'Noto Sans KR', sans-serif" ;>에어컨 등 공조 장치도 음성으로 제어 가능</p> <!-- 부재-->
 						</header>
@@ -207,7 +206,7 @@
 
 	</div>
 
-	<!-- Scripts -->
+	<!-- 애니메이션, 웹 동작에 필요한 Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
