--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet"> <!--폰트 사용-->
-
+		<!-- kakaolink javascript-->
+		<script src="assets/js/kakao.min.js"></script>
 		<!-- Demo CSS -->
 		<link rel="stylesheet" href="flexslider/demo/css/flexslider.css" type="text/css" media="screen" />
 
@@ -15,11 +16,16 @@
 		<script src="flexslider/demo/js/modernizr.js"></script>
 <!--부 제목 만들기 위한 공간 -->
 
-<style>
+<style type = "text/css">
 /* 아래 컨텐츠 부제목 */
 #Subtitle
 {
 	margin-bottom:-20px;
+}
+
+a:link
+{
+	color: white; text-decoration: none;
 }
 </style>
 
@@ -247,6 +253,11 @@
 							<!-- Footer -->
 								<footer id="footer">
 									<p class="copyright">&copy; 웹 프레임 워크 2조 송창범, 진승오</a>.</p>
+									<div class="panel-body">
+									<a id="kakao-link-btn" href="javascript:sendLink()">
+									<img src="images/kakaolink_btn_medium.png"/>
+								</a>
+								</div>
 								</footer>
 						</div>
 					</div>
@@ -304,5 +315,45 @@
 		})();
 		</script>
 
+		<!-- kakao -->
+		<script type='text/javascript'>
+		  //<![CDATA[
+		    // // 사용할 앱의 JavaScript 키를 설정해 주세요.
+		    Kakao.init('cf8f8ed6b58530a9c087f9011c5b22b4');
+		    // // 카카오링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
+		    function sendLink() {
+		      Kakao.Link.sendDefault({
+		    	objectType: 'feed',
+		    	content: {
+		    	  title: 'Web Framework',
+		    	  description: '#kakao #ai #2조 #송창범 #진승오',
+		    	  imageUrl: '',
+		    	  link: {
+		    		mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
+		    		webUrl: 'http://211.207.68.165/WebF/index.html'
+		    	  }
+		    	},
+		    	social: {
+		    	  likeCount: 22286,
+		    	  commentCount: 14,
+		    	  sharedCount: 105
+		    	},
+		    	buttons: [{
+		    	  title: 'PC버전으로 보기',
+		    	  link: {
+		    		mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
+		    		webUrl: 'http://211.207.68.165/WebF/index.html'
+		    	  }
+		    	}, {
+		    	  title: 'Moblie버전으로 보기',
+		    	  link: {
+		    		mobileWebUrl: 'http://211.207.68.165/WebF/index.html',
+		    		webUrl: 'http://211.207.68.165/WebF/index.html'
+		    	  }
+		    	}]
+		      });
+		    }
+		  //]]>
+		</script>
 	</body>
 </html>
