--- a/kakaomini.html
+++ b/kakaomini.html
@@ -16,6 +16,10 @@
 		#Subtitle {
 			margin-bottom: -20px;
 		}
+		a:link
+		{
+			color: white; text-decoration: none;
+		}
 	</style>
 </head>
 <body class="is-preload">
